# raptor-midi-usb-watcher

./: CMakeLists.txt  README.md
config/: raptor-midi-usb-watcher.example.yaml
include/raptor_midi_usb_watcher/: alsa_enumerator.hpp  application.hpp  config.hpp  control_client.hpp  yaml_updater.hpp
packaging/: raptor-midi-usb-watcher.service
src/: alsa_enumerator.cpp  application.cpp  config.cpp  control_client.cpp  main.cpp  yaml_updater.cpp
